--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Bola de Cristal</title>
   </head>
   <body>
-    <img
-      src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg"
-      alt="Imagem de uma bola de cristal"
-    />
+    <div id="container">
+      <img
+        src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg"
+        alt="Imagem de uma bola de cristal"
+      />
 
-    <h1>Vou revelar seu destino</h1>
-    <p>Clique em Fazer Pergunta para que seu destino seja revelado</p>
+      <h1>Vou revelar seu destino</h1>
+      <p>Clique em Fazer Pergunta para que seu destino seja revelado</p>
 
-    <input type="text" placeholder="Digite sua pergunta" />
-    <button>Faer Pergunta</button>
+      <input type="text" placeholder="Digite sua pergunta" />
+      <button>Faer Pergunta</button>
+    </div>
   </body>
 </html>
