ajustes no html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         alt="Imagem de uma bola de cristal"
       />
 
-      <h1>Vou revelar seu destino</h1>
+      <h1>Vou revelar seu destino!</h1>
       <p>Clique em Fazer Pergunta para que seu destino seja revelado</p>
 
       <input type="text" placeholder="Digite sua pergunta" />
-      <button>Faer Pergunta</button>
+      <button>Fazer Pergunta</button>
     </div>
   </body>
 </html>
