--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
-    <title>Bola de Cristal</title>
+    <script type="text/javascript" src="./index.js" defer></script>
+    <link rel="stylesheet" href="./index.css">
+    <title>Vou revelar seu destino!</title>
   </head>
   <body>
     <div id="container">
@@ -17,8 +18,10 @@
       <h1>Vou revelar seu destino!</h1>
       <p>Clique em Fazer Pergunta para que seu destino seja revelado</p>
 
-      <input type="text" placeholder="Digite sua pergunta" />
-      <button>Fazer Pergunta</button>
+      <input id="inputPergunta" type="text" placeholder="Digite sua pergunta" />
+      <button id="buttonPerguntar" onclick="fazerPergunta()">Fazer Pergunta</button>
+
+      <h3 id="resposta"></h3>
     </div>
   </body>
 </html>
