--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       />
 
       <h1>Vou revelar seu destino!</h1>
-      <p>Clique em <strong>Fazer Pergunta</strong> para que seu destino seja revelado</p>
+      <p>Clique em Fazer Pergunta para que seu destino seja revelado</p>
 
       <input id="inputPergunta" type="text" placeholder="Digite sua pergunta" />
       <button id="buttonPerguntar" onclick="fazerPergunta()">Fazer Pergunta</button>
