--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="container">
       <img
-        src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg"
+        src="./assets/mago .png"
         alt="Imagem de uma bola de cristal"
       />
 
