--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="./index.js" defer></script>
     <link rel="stylesheet" href="./index.css">
+    <link rel="shortcut icon" href="./assets/fav.png" type="image/x-icon">
     <title>Vou revelar seu destino!</title>
   </head>
   <body>
